# FantasyBaseball

./: .gitignore  CLAUDE.md  README.md  scriptReferences.md
backend/: .env.example  alembic.ini  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 85a15da425f7_add_last_season_rank_columns.py  8c291f7dabec_add_draft_session_and_history.py  94ac94ac6f26_add_age_experience_fields.py  a3b7c9d2e4f1_add_previous_team_column.py  b1f2c3d4e5f6_add_planner_targets_to_league.py  c4ec462cdcfa_add_draft_order_tracking.py  c7d8e9f0a1b2_add_team_claims.py  e9187ef9eceb_add_performance_indexes.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  utils.py
backend/app/data/: position_tiers.py
backend/app/models/: __init__.py  league.py  player.py  prospect.py
backend/app/schemas/: __init__.py  league.py  player.py  recommendation.py
backend/app/services/: __init__.py  adp_service.py  category_calculator.py  data_sync_service.py  draft_service.py  espn_service.py  pick_predictor.py  rankings_service.py  recommendation_engine.py  vorp_calculator.py
backend/app/static/: index.html
backend/scripts/: add_2026_prospects.py  add_article_notes.py  migrate_add_prospect_fields.py
backend/tests/: conftest.py  test_category_calculator.py  test_data_sync_integration.py  test_draft_api.py  test_draft_service.py  test_league_claims_api.py  test_pick_predictor.py  test_players_api.py  test_prospect_evaluation.py  test_recommendation_engine.py  test_recommendations_api.py  test_utils.py  test_vorp_calculator.py
(+10 files in other folders)
