[project]
name = "fbb-backend"
version = "0.1.0"
description = "Fantasy Baseball Draft Assistant Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "espn-api>=0.35.0",
    "pybaseball>=2.2.7",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "rookiepy>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
